Finishing all Sections to move Forward Mobile

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^19.1.0"
   },
   "scripts": {
-    "dev": "webpack",
+    "dev": "webpack serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
